FIX : send query button alignment

--- a/projects/kavyatech/assets/css/style.css
+++ b/projects/kavyatech/assets/css/style.css
@@ -758,6 +758,11 @@ label {
     #contact .g3 .card-title{
         padding : 0 2rem;
     }
+
+    #contact .btn-holder{
+        margin-bottom : 30px;
+        text-align: center;
+    }
     
 }
 
